[gd_scene load_steps=21 format=3 uid="uid://bpem8g4wggxfj"]

[ext_resource type="Script" uid="uid://unvmscnyuv1u" path="res://scripts/start_screen.gd" id="1_4n8vr"]
[ext_resource type="FontFile" uid="uid://c64uwy3an36dg" path="res://assets/font/PixelOperator8.ttf" id="2_jhuqw"]
[ext_resource type="Script" uid="uid://wb2gdi4icipk" path="res://scripts/canvas_layer.gd" id="3_jfjsn"]
[ext_resource type="FontFile" uid="uid://bkham1u6p33co" path="res://assets/font/PixelOperator8-Bold.ttf" id="4_qmrsi"]
[ext_resource type="Texture2D" uid="uid://i5xeeruhe8dw" path="res://assets/sprites/sun-rays-png-36873.png" id="5_nvqqj"]
[ext_resource type="AudioStream" uid="uid://blrywah8qqq2e" path="res://assets/audio/game-start-317318 (mp3cut.net).mp3" id="6_voqxn"]
[ext_resource type="Shader" uid="uid://8lskv0elldo2" path="res://random/crt.gdshader" id="7_4hu7y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xjm0"]
bg_color = Color(0.772549, 0.47451, 0.0313726, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vpym"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nwqi"]
bg_color = Color(0.772549, 0.47451, 0.0313726, 1)
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.0588235, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbwoh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_td5ce"]
Button/styles/hover = SubResource("StyleBoxFlat_7xjm0")
Button/styles/hover_mirrored = null
Button/styles/hover_pressed = SubResource("StyleBoxFlat_0vpym")
Button/styles/normal = SubResource("StyleBoxFlat_3nwqi")
Button/styles/pressed = SubResource("StyleBoxFlat_hbwoh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xjm0"]

[sub_resource type="Animation" id="Animation_xo84u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_td5ce"]
resource_name = "float"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.99, 3.01, 3.99, 4.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.174533, 0.261799, 0.349066, 0.436332]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.02, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_reu5o"]
_data = {
&"RESET": SubResource("Animation_xo84u"),
&"float": SubResource("Animation_td5ce")
}

[sub_resource type="Environment" id="Environment_td5ce"]
glow_enabled = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vpym"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nwqi"]
shader = ExtResource("7_4hu7y")

[sub_resource type="QuadMesh" id="QuadMesh_hbwoh"]
size = Vector2(1800, 1000)
center_offset = Vector3(640, 360, 0)

[node name="Node" type="Node"]
script = ExtResource("1_4n8vr")

[node name="HighScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 540.0
offset_top = 531.0
offset_right = 743.0
offset_bottom = 554.0
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("2_jhuqw")
theme_override_font_sizes/font_size = 20
text = "High Score: 0"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_jfjsn")

[node name="Button" type="Button" parent="CanvasLayer"]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -164.0
offset_right = 97.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_td5ce")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("4_qmrsi")
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xjm0")
text = "START"

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color(2, 2, 2, 1)
offset_left = 355.0
offset_top = 104.0
offset_right = 915.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_shadow_color = Color(0.679965, 0.400693, 0.117785, 1)
theme_override_colors/font_outline_color = Color(0.941176, 0.827451, 0.486275, 1)
theme_override_fonts/font = ExtResource("4_qmrsi")
theme_override_font_sizes/font_size = 70
text = "KeyLoops"

[node name="Sun-rays-png-36873" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(640, -148)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_nvqqj")
offset = Vector2(23.3333, 24.6667)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Sun-rays-png-36873"]
libraries = {
&"": SubResource("AnimationLibrary_reu5o")
}
autoplay = "float"

[node name="start" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("6_voqxn")
bus = &"sfx"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_td5ce")

[node name="watermark" type="Label" parent="."]
offset_left = 1070.0
offset_top = 669.0
offset_right = 1273.0
offset_bottom = 714.0
theme_override_colors/font_color = Color(0.930101, 0.872975, 0, 1)
theme_override_colors/font_shadow_color = Color(0.807843, 0.521569, 0.0980392, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.235, 0.851)
theme_override_fonts/font = ExtResource("2_jhuqw")
theme_override_font_sizes/font_size = 20
text = "Made by :
prolly_adi"
horizontal_alignment = 2

[node name="HTP" type="Button" parent="."]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -635.0
offset_top = -50.0
offset_right = -442.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_td5ce")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("4_qmrsi")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_0vpym")
text = "How to play"

[node name="settings" type="Button" parent="."]
modulate = Color(1.03, 1.028, 1.03, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -637.0
offset_top = -107.0
offset_right = -444.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_td5ce")
theme_override_colors/font_disabled_color = Color(0.941176, 0.831373, 0.117647, 0.768627)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.819608, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.827451, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.868851, 0.626936, 0.269727, 1)
theme_override_colors/font_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.827451, 0.117647, 1)
theme_override_fonts/font = ExtResource("4_qmrsi")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_0vpym")
text = "Settings"

[node name="effect" type="CanvasLayer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="effect"]
material = SubResource("ShaderMaterial_3nwqi")
mesh = SubResource("QuadMesh_hbwoh")

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="HTP" to="." method="_on_htp_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
